# CognitiveAgent

./: .gitignore  Memory.md  README.md  action.py  agent6.py  artifacts.py  client.py  ddgs.py  decision.py  memory.py  perception.py  pyproject.toml  query1.sh  query2.sh  query3.sh  query3_run2.sh  schemas.py
Logs/: Query1.txt  Query2.txt  Query3.txt
llm_gatewayV3/: main.py  providers.py  router.py
